更新执行器，更新调度中心